Fix styling issues on small screens
Updated responsiveness at small screen sizes.  Adds breakpoint at 830px
to switch to more minimal/condensed display.  May need further
refinement.

--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -12,6 +12,8 @@ $header-background: $color-darkest;
 $nav-text: $color-darkest;
 $nav-link-background: $color-lightest;
 
+$width-breakpoint-md: 830px;
+
 //*{
 //  border: 1px solid blue;
 //}
@@ -66,6 +68,21 @@ a:hover{
   }
 }
 
+@media screen and (max-width: $width-breakpoint-md) {
+  #name-logo{
+    width: 100%;
+    h1{
+      margin-left: 10%;
+      float: left;
+   font-size: 2em;
+    }
+    h2{
+      margin-right: 10%;
+      float: right;
+    }
+  }
+}
+
 nav {
   float:right;
 } 
@@ -114,8 +131,35 @@ nav a.active {
   padding-left: 0;
 }
 
+@media screen and (max-width: $width-breakpoint-md) {
+  nav{
+    width: 100%;
+    li{
+      height: 40px;
+      width: 30%;
+      margin: 0 0;
+    }
+    li:first-child{
+      margin-left: 4%
+    }
+    li:last-child{
+      margin-right: 4%
+    }
+    a{
+      width: 100%;
+      line-height: 40px;
+    }
+  }
+}
+
 .section-wrapper{
-  margin: 75px 100px 32px;  //Acts as a 'min-margin' on section, which has auto
+  margin: 75px 50px 32px;  //Acts as a 'min-margin' on section, which has auto
+}
+
+@media screen and (max-width: $width-breakpoint-md) {
+  .section-wrapper{
+    margin: 60px 0;
+  }
 }
 
 section{
@@ -134,6 +178,13 @@ article{
   overflow: hidden;
   border-bottom-right-radius: 20px;
 }
+
+@media screen and (max-width: $width-breakpoint-md) {
+  article{
+    margin: 20px 0;
+  }
+}
+
 .article-header{
   color: $color-gold-bright;
   background-color: $color-darkest;
@@ -157,27 +208,43 @@ article{
 
 .article-body{
   div{
-  vertical-align: top;
+    vertical-align: top;
   } 
 }
 
+.article-img {
+  width: 35%;
+  overflow: auto;
+  float:left;
+}
 
-.article-img{
-  display: inline-block;
-  height: 300px;
-  margin-left: 0;
-  box-shadow: 5px 0px 10px -2px $color-darker;
+.article-img img{
+  display: block;
+  width: 300px;
 }
 
 .article-text{
-  max-width: 55%;
-  display: inline-block;
+  width: 60%;
+  max-height: 300px;
+  overflow: auto;
+  margin: 0 2%;
+  float:right;
   font-size:1.1em;
-  margin-left: 30px;
-  p{
-  }
   li ul{ //nested list
     padding-left: 30px;
+  }
+}
+
+@media screen and (max-width: $width-breakpoint-md) {
+  .article-img, .article-text{
+    float: none;
+    width: auto;
+  }
+  .article-img{
+    background: $color-darkest;
+    img{
+      margin: 0 auto;
+    }
   }
 }
 
@@ -205,10 +272,10 @@ article{
     color: $color-gold;
   }
   h2{
-  margin: 15px 0; 
+    margin: 15px 0; 
   }
   h3{
-  margin: 10px 0; 
+    margin: 10px 0; 
   }
   h4{
     margin: 0 0 0 5px;
@@ -216,10 +283,10 @@ article{
     font-size: 1.2em;
   }
   ul{
- margin: 10px 0;
- li {
-  margin: 3px 0;
- }
+    margin: 10px 0;
+    li {
+      margin: 3px 0;
+    }
   }
 }
 
